# dotup

./: .gitignore  README.md  dotup.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
dotup/: __init__.py
tests/: test_dotup.py
