[tool.poetry]
name = "dotup"
version = "0.3.1"
description = "Symlink your dotfiles with ease."
authors = ["Ryan Castner <castner.rr@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/audiolion/dotup"
repository = "https://github.com/audiolion/dotup"
keywords = ["dotfiles", "cli", "symlink", "updater", "update"]

[tool.poetry.dependencies]
python = "^3.6"
crayons = "^0.1.2"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"dotup" = "dotup:dotup"
